crates/rsigma-cli/tests/snapshots/cli_explain__array_miss_human_tree.snap
---
source: crates/rsigma-cli/tests/cli_explain.rs
expression: "String::from_utf8_lossy(&output.stdout).trim()"
---
Suspicious connection (arr-1): NO MATCH
  FAIL selection
    FAIL array_match "connections" any (2 members, matched [])
      FAIL member[0]
        PASS protocol|exact "tcp" (matched)
        FAIL ip|cidr "123.1.0.0/16"  actual="10.0.0.1" (value mismatch)
      FAIL member[1]
        FAIL protocol|exact "tcp"  actual="UDP" (value mismatch)
        PASS ip|cidr "123.1.0.0/16" (matched)
